--- a/PROACTIF_SHN/src/main/webapp/HTML/Employe/tableau-de-bord.html
+++ b/PROACTIF_SHN/src/main/webapp/HTML/Employe/tableau-de-bord.html
@@ -28,7 +28,11 @@
             <!-- Menu latéral -->
             <div class="border-right" id="sidebar-wrapper">
                 <!-- Bouton de montrer/cacher Menu -->
-                <div class="btn">Menu</div>
+                <div class="row">
+                    <div class="col" style="border-right: 0px">
+                        <img id="menu" src="../../assets/img/logo-menu.png" alt="Menu"  style="width: 30px;">
+                    </div>
+                </div>
 
                 <!-- Prénom, Nom et photo -->
                 <div class="sidebar-heading text-center">
@@ -37,13 +41,21 @@
                 </div>
 
                 <!-- Items de navigation -->
-                <div class="list-group list-group-flush">
+                <div class="list-group list-group-flush" style="margin-bottom: 40px">
                     <a href="info-perso.html" class="acive text-center list-group-item list-group-item-action ">Informations personnelles</a>
                     <a href="intervention-en-cours-employe.html" class="text-center list-group-item list-group-item-action">Interventions en cours</a>
                     <a href="historique-interventions.html" class="text-center list-group-item list-group-item-action">Historique</a>
-                    <a href="tableau-de-bord.html" class="text-center list-group-item list-group-item-action">Tableau de bord</a>
-                    <a href="../../index.html" class="list-group-item list-group-item-action" onclick="deconnexion()">Déconnexion</a>
+                    <a href="tableau-de-bord.html" class="text-center list-group-item list-group-item-action">Tableau de bord</a>                    
                 </div>
+                <div class="row justify-content-left">
+
+                  <div class="col-2">
+                       <img id="logout" src="../../assets/img/logo-logout.png" alt="Logout"  style="width: 50px;">
+                  </div>                    
+                  <div class="col-6">
+                       <a style = "position: 1" href="../../index.html" class="list-group-item list-group-item-action" onclick="deconnexion()">Déconnexion</a>
+                   </div>
+              </div>
             </div>  <!-- fin du menu latéral -->
             
 
