--- a/PROACTIF_SHN/src/main/webapp/HTML/Employe/cloture-intervention.html
+++ b/PROACTIF_SHN/src/main/webapp/HTML/Employe/cloture-intervention.html
@@ -41,7 +41,7 @@
 
                 <!-- Prénom, Nom et photo -->
                 <div class="sidebar-heading text-center">
-                    Prénom et Nom (Dynamiquement)
+                    <p id="nomMenu">Prénom et Nom (Dynamiquement)</p>
                     <img id="photo-profil" src="../../assets/img/photo-employe.jpg" alt="Photo de profil" class="img-thumbnail img-fluid">
                 </div>
 
@@ -240,5 +240,6 @@
         
         <script type="text/javascript" src="../../JS/clotureInterventionEmploye.js"></script>
         <script type="text/javascript" src="../../JS/deconnexion.js"></script>
+        <script type="text/javascript" src="../../JS/menuLateral.js"></script>
     </body>
 </html>
