--- a/PROACTIF_SHN/src/main/webapp/HTML/Employe/info-perso.html
+++ b/PROACTIF_SHN/src/main/webapp/HTML/Employe/info-perso.html
@@ -36,7 +36,7 @@
 
                 <!-- Prénom, Nom et photo -->
                 <div class="sidebar-heading text-center">
-                    Prénom et Nom (Dynamiquement)
+                    <p id="nomMenu">Prénom et Nom (Dynamiquement)</p>
                     <img id="photo-profil" src="../../assets/img/photo-employe.jpg" alt="Photo de profil" class="img-thumbnail img-fluid">
                 </div>
 
@@ -264,5 +264,6 @@
 
         <script type="text/javascript" src="../../JS/infoPersoEmploye.js"></script>
         <script type="text/javascript" src="../../JS/deconnexion.js"></script>
+        <script type="text/javascript" src="../../JS/menuLateral.js"></script>
     </body>
 </html>
