--- a/PROACTIF_SHN/src/main/webapp/HTML/Employe/intervention-en-cours-employe.html
+++ b/PROACTIF_SHN/src/main/webapp/HTML/Employe/intervention-en-cours-employe.html
@@ -38,7 +38,7 @@
 
                 <!-- Prénom, Nom et photo -->
                 <div class="sidebar-heading text-center">
-                    Prénom et Nom (Dynamiquement)
+                    <p id="nomMenu">Prénom et Nom (Dynamiquement)</p>
                     <img id="photo-profil" src="../../assets/img/photo-employe.jpg" alt="Photo de profil" class="img-thumbnail img-fluid">
                 </div>
 
@@ -282,5 +282,6 @@
 
         <script type="text/javascript" src="../../JS/interventionEnCoursEmploye.js"></script>
         <script type="text/javascript" src="../../JS/deconnexion.js"></script>
+        <script type="text/javascript" src="../../JS/menuLateral.js"></script>
     </body>
 </html>
