--- a/PROACTIF_SHN/src/main/webapp/HTML/Employe/tableau-de-bord.html
+++ b/PROACTIF_SHN/src/main/webapp/HTML/Employe/tableau-de-bord.html
@@ -36,7 +36,7 @@
 
                 <!-- Prénom, Nom et photo -->
                 <div class="sidebar-heading text-center">
-                    Prénom et Nom (Dynamiquement)
+                    <p id="nomMenu">Prénom et Nom (Dynamiquement)</p>
                     <img id="photo-profil" src="../../assets/img/photo-employe.jpg" alt="Photo de profil" class="img-thumbnail img-fluid">
                 </div>
 
@@ -88,5 +88,6 @@
         <script type="text/javascript" src="../../JS/tableauDeBord.js"></script>
         <script type="text/javascript" src="../../JS/deconnexion.js"></script>
         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAklw96N9rLd93ubr-F04CN7qi2ryKayAc&callback=initMap"></script>
+        <script type="text/javascript" src="../../JS/menuLateral.js"></script>
     </body>
 </html>
