--- a/PROACTIF_SHN/src/main/webapp/HTML/Client/detail-intervention-client.html
+++ b/PROACTIF_SHN/src/main/webapp/HTML/Client/detail-intervention-client.html
@@ -30,7 +30,7 @@
             <div class="border-right" id="sidebar-wrapper">
                 <!-- Bouton de montrer/cacher Menu -->
                 <div class="row">
-                    <div class="col" style="border-right: 0px">
+                    <div class="col-1 offset-9" style="border-right: 0px">
                         <img id="menu" src="../../assets/img/logo-menu.png" alt="Menu"  style="width: 30px;">
                     </div>
                 </div>
@@ -53,8 +53,8 @@
                          <img id="logout" src="../../assets/img/logo-logout.png" alt="Logout"  style="width: 50px;">
                     </div>                    
                     <div class="col-6">
-                         <a style = "position: 1" href="../../connexion-client.html" class="list-group-item list-group-item-action" onclick="deconnexion()">Déconnexion</a>
-                     </div>
+                        <a style = "position: 1; background-color: #4682B4; " href="../../connexion-client.html" class="list-group-item list-group-item-action text-white" onclick="deconnexion()">Déconnexion</a>
+                    </div>
                 </div>
             </div>  <!-- fin du menu latéral -->         
 
@@ -200,7 +200,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-4">
-                                                     <img id="calendar" src="../../assets/img/logo-calendar.png" alt="Calendar"  style="width: 40px;">
+                                                     <img id="calendar" src="../../assets/img/logo-calendar.png" alt="Calendar"  style="width: 30px;">
                                                 </div>
                                             </div>    
                                         </div> <!-- Fin Demande -->
@@ -222,14 +222,14 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-4">
-                                                      <img id="calendar" src="../../assets/img/logo-calendar.png" alt="Calendar"  style="width: 40px;">
+                                                      <img id="calendar" src="../../assets/img/logo-calendar.png" alt="Calendar"  style="width: 30px;">
                                                 </div>
                                             </div>                                          
                                         </div> <!-- Fin Cloture -->
                                     </div> <!-- Fin 4ème ligne (Date demande,cloture) -->
                                     
                                     <!-- 5ème ligne (Description)-->
-                                    <div class='row'>
+                                    <div class='row' style="margin-bottom: 10px;">
                                         <div class="col">
                                             <!-- Label Description -->
                                             <div class="row">
@@ -248,7 +248,7 @@
                                     </div> <!-- Fin 5ème ligne (Description)-->
                                     
                                     <!-- 6ème ligne (Commentaire)-->
-                                    <div class='row'>
+                                    <div class='row' style="margin-bottom: 10px;">
                                         <div class="col">
                                             <!-- Label Commentaire -->
                                             <div class="row">
