--- a/PROACTIF_SHN/src/main/webapp/HTML/Client/demandeIntervention.html
+++ b/PROACTIF_SHN/src/main/webapp/HTML/Client/demandeIntervention.html
@@ -31,7 +31,7 @@
             <div class="border-right" id="sidebar-wrapper">
                 <!-- Bouton de montrer/cacher Menu -->
                 <div class="row">
-                    <div class="col" style="border-right: 0px">
+                    <div class="col-1 offset-9" style="border-right: 0px">
                         <img id="menu" src="../../assets/img/logo-menu.png" alt="Menu"  style="width: 30px;">
                     </div>
                 </div>
@@ -54,8 +54,8 @@
                          <img id="logout" src="../../assets/img/logo-logout.png" alt="Logout"  style="width: 50px;">
                     </div>                    
                     <div class="col-6">
-                         <a style = "position: 1" href="../../connexion-client.html" class="list-group-item list-group-item-action" onclick="deconnexion()">Déconnexion</a>
-                     </div>
+                        <a style = "position: 1; background-color: #4682B4; " href="../../connexion-client.html" class="list-group-item list-group-item-action text-white" onclick="deconnexion()">Déconnexion</a>
+                    </div>
                 </div>
             </div>  <!-- fin du menu latéral -->
 
