--- a/PROACTIF_SHN/src/main/webapp/HTML/Client/connexion-client.html
+++ b/PROACTIF_SHN/src/main/webapp/HTML/Client/connexion-client.html
@@ -26,7 +26,7 @@
             <!-- Bandeau en-tête -->
            <div id="en-tete" class="row text-white">
                 <!-- Logo vélo et maison -->
-                <div class="col">
+                <div class="col-2" >
                     <div class="row h-100">
                         <div class="col my-auto">
                               <img id="calendar" src="../../assets/img/velo-lego.png" alt="Calendar"  style="width: 50px;">
@@ -39,21 +39,21 @@
                 </div> <!-- Fin logo vélo maison -->
 
                 <!-- Logos Communication -->
-                <div class="col">
-                    <div class="row h-100">
-                        <div class="col my-auto">
+                <div class="col-4 offset-6">
+                    <div class="row h-100" style ="margin-top: 5px;">
+                        <div class="col-3">
                               <img id="facebook" src="../../assets/img/facebook-logo.png" alt="Facebook"  style="width: 30px;">
                         </div>
 
-                        <div class="col my-auto">
+                        <div class="col-3">
                               <img id="twitter" src="../../assets/img/twitter-logo.png" alt="Twitter"  style="width: 30px;">
                         </div>
 
-                        <div class="col my-auto">
+                        <div class="col-3">
                               <img id="mail" src="../../assets/img/mail-logo.png" alt="Mail"  style="width: 30px;">
                         </div>
 
-                        <div class="col my-auto">
+                        <div class="col-3">
                               <img id="instagram" src="../../assets/img/instagram-logo.png" alt="Instagram"  style="width: 30px;">
                         </div>
                     </div>
@@ -61,8 +61,8 @@
             </div> <!-- Fin bandeau d'en-tête -->
 
             <!-- Corps de login -->
-            <div class="row h-50 align-items-end">
-                <div class ="col-8">
+            <div class="row h-75 align-items-end">
+                <div class ="col-7">
                     <div class="col text-black text-center">
                     <h1>PROACT'IF</h1>
                     </div>
