--- a/PROACTIF_SHN/src/main/webapp/HTML/Client/info-perso-client.html
+++ b/PROACTIF_SHN/src/main/webapp/HTML/Client/info-perso-client.html
@@ -29,7 +29,7 @@
             <div class="border-right" id="sidebar-wrapper">
                 <!-- Bouton de montrer/cacher Menu -->
                 <div class="row">
-                    <div class="col-1 offset-9" style="border-right: 0px">
+                    <div class="col-1 offset-9"  style="margin-top: 10px">
                         <img id="menu" src="../../assets/img/logo-menu.png" alt="Menu"  style="width: 30px;">
                     </div>
                 </div>
@@ -46,13 +46,13 @@
                     <a href="demandeIntervention.html" class="text-center list-group-item list-group-item-action">Demande intervention</a>
                     <a href="historique-interventions-client.html" class="text-center list-group-item list-group-item-action">Historique</a>
                 </div>
-                <div class="row justify-content-left">
+                <div class="row justify-content-left" style="margin-left: 10px">
                      
                     <div class="col-2">
                          <img id="logout" src="../../assets/img/logo-logout.png" alt="Logout"  style="width: 50px;">
                     </div>                    
                     <div class="col-6">
-                          <a style = "position: 1; background-color: #4682B4; " href="../../connexion-client.html" class="list-group-item list-group-item-action text-white" onclick="deconnexion()">Déconnexion</a>
+                          <a style = "position: 1; background-color: #4682B4;  border: none; " href="../../connexion-client.html" class="list-group-item list-group-item-action text-white" onclick="deconnexion()">Déconnexion</a>
                     </div>
                 </div>
             </div>  <!-- fin du menu latéral -->
