--- a/PROACTIF_SHN/src/main/webapp/HTML/Employe/intervention-en-cours-employe.html
+++ b/PROACTIF_SHN/src/main/webapp/HTML/Employe/intervention-en-cours-employe.html
@@ -30,7 +30,7 @@
             <!-- Menu latéral -->
             <div class="border-right" id="sidebar-wrapper">
                 <!-- Bouton de montrer/cacher Menu -->
-                <div class="row" style="margin-top: 10">
+                <div class="row"  style="margin-top: 10px">
                     <div class="col-1 offset-9"  style="border-right: 0px; border-top: 10;">
                         <img id="menu" src="../../assets/img/logo-menu.png" alt="Menu"  style="width: 30px;">
                     </div>
@@ -50,13 +50,13 @@
                     <a href="tableau-de-bord.html" class="text-center list-group-item list-group-item-action">Tableau de bord</a>
       
                 </div>
-                <div class="row justify-content-left">
+                <div class="row justify-content-left" style="margin-left: 10px">
 
                   <div class="col-2">
                        <img id="logout" src="../../assets/img/logo-logout.png" alt="Logout"  style="width: 50px;">
                   </div>                    
                   <div class="col-6">
-                        <a style = "position: 1; background-color: #4682B4; " href="../../index.html" class="list-group-item list-group-item-action text-white" onclick="deconnexion()">Déconnexion</a>
+                        <a style = "position: 1; background-color: #4682B4;  border: none; " href="../../index.html" class="list-group-item list-group-item-action text-white" onclick="deconnexion()">Déconnexion</a>
                   </div>
               </div>
             </div>  <!-- fin du menu latéral -->
